--- a/client/package.json
+++ b/client/package.json
@@ -3,14 +3,17 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "material-ui": "^1.0.0-beta.21",
         "react": "^16.0.0",
         "react-dom": "^16.0.0",
         "react-redux": "^5.0.6",
         "react-router": "^4.2.0",
+        "react-router-dom": "^4.2.2",
         "react-scripts": "1.0.17",
         "redux": "^3.7.2",
         "redux-logger": "^3.0.6",
-        "redux-promise": "^0.5.3"
+        "redux-promise": "^0.5.3",
+        "typeface-roboto": "0.0.45"
     },
     "scripts": {
         "start": "react-scripts start",
