--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,7 @@
     "private": true,
     "dependencies": {
         "material-ui": "^1.0.0-beta.21",
+        "material-ui-icons": "^1.0.0-beta.17",
         "react": "^16.0.0",
         "react-dom": "^16.0.0",
         "react-redux": "^5.0.6",
@@ -23,6 +24,7 @@
     },
     "proxy": "http://localhost:3001/",
     "devDependencies": {
+        "eslint-plugin-babel": "^4.1.2",
         "redux-devtools-extension": "^2.13.2"
     }
 }
