--- a/client/package.json
+++ b/client/package.json
@@ -3,14 +3,24 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "airbnb-prop-types": "^2.8.1",
+        "lodash": "^4.17.4",
         "material-ui": "^1.0.0-beta.21",
         "material-ui-icons": "^1.0.0-beta.17",
-        "react": "^16.0.0",
-        "react-dom": "^16.0.0",
+        "moment": "^2.19.2",
+        "react": "^16.1.1",
+        "react-addons-css-transition-group": "^15.6.2",
+        "react-addons-shallow-compare": "^15.6.2",
+        "react-dates": "^15.1.0",
+        "react-dom": "^16.1.1",
+        "react-infinite-calendar": "^2.3.1",
+        "react-moment": "^0.6.8",
+        "react-moment-proptypes": "^1.5.0",
         "react-redux": "^5.0.6",
         "react-router": "^4.2.0",
         "react-router-dom": "^4.2.2",
         "react-scripts": "1.0.17",
+        "recompose": "^0.22.0",
         "redux": "^3.7.2",
         "redux-logger": "^3.0.6",
         "redux-promise": "^0.5.3",
