--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
         "redux": "^3.7.2",
         "redux-logger": "^3.0.6",
         "redux-promise": "^0.5.3",
+        "redux-thunk": "^2.2.0",
         "typeface-roboto": "0.0.45"
     },
     "scripts": {
